--- a/src/master.html
+++ b/src/master.html
@@ -12,7 +12,7 @@
     <!-- fichiers js -->
     <script src="./js/bgMenu.js"></script>
     <script src="./js/navBarre.js"></script>
-    <script src="./js/echart.js"></script>
+    <script src="./js/echarts.js"></script>
 
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
