--- a/src/lesEtablissements.html
+++ b/src/lesEtablissements.html
@@ -66,108 +66,120 @@
         document.getElementById('footer-container').innerHTML = data;
       })
       .catch(error => console.error('Error loading header:', error));
+    document.addEventListener('DOMContentLoaded', () => {
+      const backToTopButton = document.getElementById('back-to-top');
+      const backButton = document.getElementById('back-button'); // Bouton Retour ajouté
+      const academiesContainer = document.getElementById('academies-container');
+      const etablissementsContainer = document.getElementById('etablissements-container');
+      const dynamicTitle = document.getElementById('dynamic-title');
+      let allEtablissements = [];
 
+      // Fonction pour afficher le bouton Retour
+      const showBackButton = () => {
+        backButton.classList.remove('hidden');
+      };
 
-    const apiAcademiesURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/academies';
-    const apiEtablissementsURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/etablissements';
+      // Fonction pour cacher le bouton Retour
+      const hideBackButton = () => {
+        backButton.classList.add('hidden');
+      };
 
-    const academiesContainer = document.getElementById('academies-container');
-    const etablissementsContainer = document.getElementById('etablissements-container');
+      // Gestion du bouton Retour
+      backButton.addEventListener('click', () => {
+        etablissementsContainer.classList.add('hidden'); // Masquer les établissements
+        academiesContainer.classList.remove('hidden');  // Afficher les académies
+        dynamicTitle.textContent = "Les différentes Académies"; // Réinitialiser le titre
+        hideBackButton(); // Cacher le bouton Retour
+      });
 
-    let allEtablissements = [];
+      // Charger les académies depuis l'API
+      fetch('https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/academies')
+        .then(response => response.json())
+        .then(data => {
+          data.forEach(academie => {
+            const card = createAcademieCard(academie);
+            academiesContainer.appendChild(card);
+          });
+        })
+        .catch(error => console.error('Erreur chargement académies:', error));
 
-    // Fonction pour créer une carte d'académie
-    const createAcademieCard = (academie) => {
-      const card = document.createElement('div');
-      card.className = 'p-4 bg-white border rounded-md shadow-sm cursor-pointer';
-      card.innerHTML = `
+      // Fonction pour créer une carte d'académie
+      const createAcademieCard = (academie) => {
+        const card = document.createElement('div');
+        card.className = 'p-4 bg-white border rounded-md shadow-sm cursor-pointer';
+        card.innerHTML = `
             <h2 class="font-bold text-lg mb-2 lg:text-2xl">${academie.nom}</h2>
             <p class="text-sm text-gray-500">ID : ${academie.id}</p>
         `;
-      card.addEventListener('click', () => {
-        academiesContainer.classList.add('hidden'); // Cacher les académies
-        etablissementsContainer.classList.remove('hidden'); // Afficher les établissements
-        loadEtablissements(academie.id, academie.nom); // Passer l'ID et le nom de l'académie
-      });
-      return card;
-    };
+        card.addEventListener('click', () => {
+          academiesContainer.classList.add('hidden'); // Cacher les académies
+          etablissementsContainer.classList.remove('hidden'); // Afficher les établissements
+          loadEtablissements(academie.id, academie.nom); // Charger les établissements
+          showBackButton(); // Afficher le bouton Retour
+        });
+        return card;
+      };
 
-    // Fonction pour créer une carte d'établissement
-    const createEtablissementCard = (etablissement) => {
-      const card = document.createElement('a');
-      card.href = `etablissement.html?id=${etablissement.uai}`;
-      card.className = 'p-4 bg-white border rounded-md shadow-sm';
-      card.innerHTML = `
+      // Charger les établissements filtrés par académie
+      const loadEtablissements = (academieId, academieNom) => {
+        etablissementsContainer.innerHTML = ''; // Effacer les anciens établissements
+
+        if (allEtablissements.length === 0) {
+          fetch('https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/etablissements')
+            .then(response => response.json())
+            .then(data => {
+              allEtablissements = data;
+              displayEtablissementsByAcademie(academieId, academieNom);
+            })
+            .catch(error => console.error('Erreur chargement établissements:', error));
+        } else {
+          displayEtablissementsByAcademie(academieId, academieNom);
+        }
+      };
+
+      const displayEtablissementsByAcademie = (academieId, academieNom) => {
+        const filteredEtablissements = allEtablissements.filter(etab => etab.academieId === academieId);
+
+        // Mise à jour dynamique du titre H1 avec le nom de l'académie
+        if (filteredEtablissements.length > 1) {
+          dynamicTitle.textContent = `Voici les établissements disponibles dans l'académie ${academieNom}`;
+        } else if (filteredEtablissements.length === 1) {
+          dynamicTitle.textContent = `Voici l'établissement disponible dans l'académie ${academieNom}`;
+        } else {
+          dynamicTitle.textContent = `Aucun établissement disponible dans l'académie ${academieNom}`;
+        }
+
+        filteredEtablissements.forEach(etablissement => {
+          const card = createEtablissementCard(etablissement);
+          etablissementsContainer.appendChild(card);
+        });
+      };
+
+      // Fonction pour créer une carte d'établissement
+      const createEtablissementCard = (etablissement) => {
+        const card = document.createElement('a');
+        card.href = `etablissement.html?id=${etablissement.uai}`;
+        card.className = 'p-4 bg-white border rounded-md shadow-sm';
+        card.innerHTML = `
             <h2 class="font-bold text-lg mb-2 lg:text-2xl">${etablissement.nom}</h2>
             <p class="text-sm text-gray-500">UAI : ${etablissement.uai}</p>
         `;
-      return card;
-    };
+        return card;
+      };
 
-    // Charger les académies depuis l'API
-    fetch(apiAcademiesURL)
-      .then(response => response.json())
-      .then(data => {
-        data.forEach(academie => {
-          const card = createAcademieCard(academie);
-          academiesContainer.appendChild(card);
-        });
-      })
-      .catch(error => console.error('Erreur chargement académies:', error));
-
-    // Charger les établissements filtrés par académie
-    const loadEtablissements = (academieId, academieNom) => {
-      etablissementsContainer.innerHTML = ''; // Efface les anciens établissements
-
-      if (allEtablissements.length === 0) {
-        fetch(apiEtablissementsURL)
-          .then(response => response.json())
-          .then(data => {
-            allEtablissements = data;
-            displayEtablissementsByAcademie(academieId, academieNom);
-          })
-          .catch(error => console.error('Erreur chargement établissements:', error));
-      } else {
-        displayEtablissementsByAcademie(academieId, academieNom);
-      }
-    };
-
-    const displayEtablissementsByAcademie = (academieId, academieNom) => {
-      const filteredEtablissements = allEtablissements.filter(etab => etab.academieId === academieId);
-
-      // Mise à jour dynamique du titre H1 avec le nom de l'académie
-      const title = document.getElementById('dynamic-title');
-      if (filteredEtablissements.length > 1) {
-        title.textContent = `Voici les établissements disponibles dans l'académie ${academieNom}`;
-      } else if (filteredEtablissements.length === 1) {
-        title.textContent = `Voici l'établissement disponible dans l'académie ${academieNom}`;
-      } else {
-        title.textContent = `Aucun établissement disponible dans l'académie ${academieNom}`;
-      }
-
-      filteredEtablissements.forEach(etablissement => {
-        const card = createEtablissementCard(etablissement);
-        etablissementsContainer.appendChild(card);
-      });
-    };
-
-    document.addEventListener('DOMContentLoaded', () => {
-      const backToTopButton = document.getElementById('back-to-top');
-
-      // Afficher la flèche lorsque l'utilisateur descend dans la page
+      // Bouton retour en haut de la page
       window.addEventListener('scroll', () => {
-        if (window.scrollY > 300) { // Affiche la flèche après 300px de défilement
+        if (window.scrollY > 300) {
           backToTopButton.classList.remove('hidden');
         } else {
           backToTopButton.classList.add('hidden');
         }
       });
 
-      // Fonctionnalité de retour en haut de la page
       backToTopButton.addEventListener('click', () => {
         window.scrollTo({
           top: 0,
-          behavior: 'smooth' // Défilement fluide
+          behavior: 'smooth'
         });
       });
     });
@@ -181,6 +193,18 @@
     class="fixed bottom-6 right-6 bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-full shadow-lg hidden">
     ↑
   </button>
+
+  <!-- Bouton Retour -->
+  <button id="back-button" title="Retour aux académies"
+    class="fixed bottom-16 right-6 bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-full shadow-lg hidden">
+    ← Retour
+  </button>
+  <!-- Bouton Retour aux académies -->
+  <button id="back-button" title="Retour aux académies"
+    class="fixed bottom-16 right-6 bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-full shadow-lg hidden">
+    ← Retour
+  </button>
+
 </body>
 
 </html>
