--- a/src/etablissement.html
+++ b/src/etablissement.html
@@ -15,6 +15,9 @@
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./js/filtresRecherche.js"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+
 </head>
 
 <body class="mt-[8rem] bg-gray-100 text-gray-800">
@@ -28,6 +31,23 @@
             <h1 id="establishment-name" class="font-bold text-5xl sm:text-6xl lg:text-7xl"></h1>
             <p id="establishment-academie" class="text-lg text-gray-600"></p>
         </div>
+
+        <div id="map" style="height: 400px; width: 100%;"></div>
+
+        <script>
+            function initMap() {
+                const location = { lat: -34.397, lng: 150.644 };
+                const map = new google.maps.Map(document.getElementById("map"), {
+                    zoom: 8,
+                    center: location,
+                });
+                const marker = new google.maps.Marker({
+                    position: location,
+                    map: map,
+                });
+            }
+        </script>
+
         <div>
             <h2 class="font-bold text-3xl mb-4">Masters disponibles</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4" id="masters-container">
