maps non fontionnelle

--- a/src/etablissement.html
+++ b/src/etablissement.html
@@ -31,6 +31,13 @@
             <h1 id="establishment-name" class="font-bold text-5xl sm:text-6xl lg:text-7xl"></h1>
             <p id="establishment-academie" class="text-lg text-gray-600"></p>
         </div>
+
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!2m3!3v2!1xyz..." width="600" height="450"
+                style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+
         <div>
             <h2 class="font-bold text-3xl mb-4">Masters disponibles</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4" id="masters-container">
