uniformisation légal/illégal

--- a/src/mentionsIllégales.html
+++ b/src/mentionsIllégales.html
@@ -21,70 +21,80 @@
 </header>
 
 <body class="mt-[8rem] bg-gray-50 text-gray-900">
-    <main class="p-8">
-        <h1 class="text-4xl font-bold text-center text-red-500 mb-12">Mentions Illégales</h1>
+    <main class="p-6">
+        <div class="mt-10">
+            <h3 class="text-center text-xl font-bold text-red-500">Mentions Illégales</h3>
+            <hr class="my-4 border-t border-gray-300">
 
-        <!-- Informations douteuses -->
-        <section class="mb-10 bg-white rounded-lg shadow-lg p-6">
-            <h2 class="text-2xl font-semibold text-red-500 mb-4">1. Informations douteuses</h2>
-            <p class="text-base mb-2"><strong>Nom du site :</strong> NaPasMaster</p>
-            <p class="text-base mb-2"><strong>Propriétaire :</strong> Une organisation malicieuse à but lucrative.</p>
-            <p class="text-base mb-2"><strong>Adresse :</strong> Quelque part dans les quartiers les plus sombres de
-                Gotham.</p>
-            <p class="text-base"><strong>Contact :</strong> Pas besoin de nous contacter, nous vous trouverons.</p>
-        </section>
+            <div class="space-y-6">
+                <!-- Informations douteuses -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold text-red-500">1. Informations douteuses</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600"><strong>Nom du site :</strong> NaPasMaster</p>
+                    <p class="mt-2 text-sm md:text-base text-gray-600"><strong>Propriétaire :</strong> Une organisation
+                        malicieuse à but lucratif.</p>
+                    <p class="mt-2 text-sm md:text-base text-gray-600"><strong>Adresse :</strong> Quelque part dans les
+                        quartiers les plus sombres de Gotham.</p>
+                    <p class="mt-2 text-sm md:text-base text-gray-600"><strong>Contact :</strong> Pas besoin de nous
+                        contacter, nous vous trouverons.</p>
+                </div>
 
-        <!-- Hébergement -->
-        <section class="mb-10 bg-white rounded-lg shadow-lg p-6">
-            <h2 class="text-2xl font-semibold text-red-500 mb-4">2. Hébergement</h2>
-            <p class="text-base"><strong>Hébergeur :</strong> Une clé USB coincée dans un vieux PC sous Windows XP.</p>
-        </section>
+                <!-- Hébergement -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold text-red-500">2. Hébergement</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600"><strong>Hébergeur :</strong> Une clé USB coincée
+                        dans un vieux PC sous Windows XP.</p>
+                </div>
 
-        <!-- Irresponsable de publication -->
-        <section class="mb-10 bg-white rounded-lg shadow-lg p-6">
-            <h2 class="text-2xl font-semibold text-red-500 mb-4">3. Irresponsable de publication</h2>
-            <p class="text-base mb-4">Les membres en charge (ou pas) de cette catastrophe numérique :</p>
-            <ul class="list-disc ml-8 text-base space-y-2">
-                <li><strong>Romain Annet</strong> : Expert en excuses pour bugs inexpliqués.</li>
-                <li><strong>Tony Delage</strong> : Designer de maquettes qui ne verront jamais le jour.</li>
-                <li><strong>David Traversier</strong> : Développeur Front-End, ou plutôt Front-Cringe.</li>
-                <li><strong>Alexis Le Corre</strong> : Maître du bouton "ça marche sur ma machine".</li>
-            </ul>
-        </section>
+                <!-- Irresponsable de publication -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold text-red-500">3. Irresponsable de publication</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">Les membres en charge (ou pas) de cette
+                        catastrophe numérique :</p>
+                    <ul class="list-disc ml-8 text-sm md:text-base text-gray-600 space-y-2">
+                        <li><strong>Romain Annet</strong> : Expert en excuses pour bugs inexpliqués.</li>
+                        <li><strong>Tony Delage</strong> : Designer de maquettes qui ne verront jamais le jour.</li>
+                        <li><strong>David Traversier</strong> : Développeur Front-End, ou plutôt Front-Cringe.</li>
+                        <li><strong>Alexis Le Corre</strong> : Maître du bouton "ça marche sur ma machine".</li>
+                    </ul>
+                </div>
 
-        <!-- Objet du site -->
-        <section class="mb-10 bg-white rounded-lg shadow-lg p-6">
-            <h2 class="text-2xl font-semibold text-red-500 mb-4">4. Objet du site</h2>
-            <p class="text-base">Ce site est supposé référencer les masters en France, mais il est aussi là pour vous
-                perdre dans des boucles infinies de bugs.</p>
-        </section>
+                <!-- Objet du site -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold text-red-500">4. Objet du site</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">Ce site est supposé référencer les masters en
+                        France, mais il est aussi là pour vous perdre dans des boucles infinies de bugs.</p>
+                </div>
 
-        <!-- Données impersonnelles -->
-        <section class="mb-10 bg-white rounded-lg shadow-lg p-6">
-            <h2 class="text-2xl font-semibold text-red-500 mb-4">5. Données impersonnelles</h2>
-            <p class="text-base mb-2">Nous collectons vos données pour les utiliser à des fins inutiles. Promis, on les
-                protège... sauf si on oublie.</p>
-            <p class="text-base">Conformément au RGPD, vous avez le droit d’accéder, de modifier ou de supprimer vos
-                données. Mais bonne chance pour nous joindre.</p>
-        </section>
+                <!-- Données impersonnelles -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold text-red-500">5. Données impersonnelles</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">Nous collectons vos données pour les utiliser à
+                        des fins inutiles. Promis, on les protège... sauf si on oublie.</p>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">Conformément au RGPD, vous avez le droit
+                        d’accéder, de modifier ou de supprimer vos données. Mais bonne chance pour nous joindre.</p>
+                </div>
 
-        <!-- Propriété corporelle -->
-        <section class="mb-10 bg-white rounded-lg shadow-lg p-6">
-            <h2 class="text-2xl font-semibold text-red-500 mb-4">6. Propriété corporelle</h2>
-            <p class="text-base">Les contenus présents ici ne sont pas protégés, mais sérieusement, qui voudrait copier
-                ça ?</p>
-        </section>
+                <!-- Propriété corporelle -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold text-red-500">6. Propriété corporelle</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">Les contenus présents ici ne sont pas protégés,
+                        mais sérieusement, qui voudrait copier ça ?</p>
+                </div>
 
-        <!-- Limitations de l'irresponsabilité -->
-        <section class="bg-white rounded-lg shadow-lg p-6">
-            <h2 class="text-2xl font-semibold text-red-500 mb-4">7. Limitations de l'irresponsabilité</h2>
-            <p class="text-base">NaPasMaster décline toute responsabilité en cas de :</p>
-            <ul class="list-disc ml-8 mt-2 text-base space-y-2">
-                <li>Explosion de votre ordinateur après un clic.</li>
-                <li>Perte de votre temps et de votre patience.</li>
-                <li>Bug intempestif causé par une pleine lune.</li>
-            </ul>
-        </section>
+                <!-- Limitations de l'irresponsabilité -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold text-red-500">7. Limitations de l'irresponsabilité</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">NaPasMaster décline toute responsabilité en cas
+                        de :</p>
+                    <ul class="list-disc ml-8 text-sm md:text-base text-gray-600 space-y-2">
+                        <li>Explosion de votre ordinateur après un clic.</li>
+                        <li>Perte de votre temps et de votre patience.</li>
+                        <li>Bug intempestif causé par une pleine lune.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer id="footer-container" class="mt-12"></footer>
